--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -47,6 +47,7 @@
       <span class="price-item price-item--regular">
         {{ money_price }}
       </span>
+      <input type="hidden" class="variant-price" value="{{ price | money }}">
     </div>
     <div class="price__sale">
       {%- unless product.price_varies == false and product.compare_at_price_varies %}
